# Peroxide

./: .build.yml  .gitignore  .travis.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTES.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  RELEASES.md  TODO.md  build.rs  expand.rs  list.md
.github/workflows/: Github.yml
benches/data/: add_test_12.md  add_test_13.md  col_test_12_col.md  col_test_13_col.md  col_test_13_idx.md  df_bench_json.md  idx_test_12.md  rayon_matrix_benchmark_results.md  row_test_12_row.md  row_test_13_idx.md  row_test_13_row.md
benches/parallel_rayon/: matrix_benchmark.rs
example/: det.rs  hyper.rs  inv.rs  mlp.rs  solve.rs
example_data/: df_bench.md  df_test.cdf  pickle_example  pickle_example_mat  pickle_mat.py  pickle_vec.py  traditional.pickle
examples/: ad.rs  area_under_spline.rs  b_spline_test.rs  broyden_test.rs  bspline_calculus.rs  chebyshev.rs  clippy_verify.rs  dataframe.rs  det.rs  df_bench_nc.rs  df_csv.rs  df_nc.rs  df_parquet.rs  dist.rs  dual.rs  gl4.rs  gradient.rs  hessian.rs  higher_order_ad.rs  hyper.rs  integrate.rs  jet_ad.rs  legendre.rs  lorenz_dp45.rs  lorenz_gl4.rs  lorenz_rk4.rs  lorenz_rkf45.rs  lorenz_rkf78.rs  lorenz_tsit45.rs  lu.rs  matmul.rs  nc_test.rs  norm.rs  ode_env.rs  ode_gl4.rs  ode_test_gl4.rs  ode_test_lorenz.rs  ode_test_orbit.rs  ode_test_rk4.rs  ode_test_rkf45.rs  (+13 more)
paper/: paper.bib  paper.md
peroxide-ad/: Cargo.toml  README.md
peroxide-ad/src/: lib.rs  peroxide_ad.wasm
peroxide-ad2/: Cargo.toml
peroxide-ad2/src/: lib.rs
peroxide-num/: Cargo.toml  README.md  RELEASE.md
peroxide-num/examples/: vec3d.rs
peroxide-num/src/: lib.rs
src/: lib.rs  linalg.rs  linalg.rs.old  main.rs  matlab_macro.rs  matrix.rs  poly.rs  print.rs  r_macro.rs  rand.rs  stat.rs  vector.rs  vector_macro.rs
src/algorithm/: fp.rs  mod.rs
src/complex/: integral.rs  matrix.rs  mod.rs  vector.rs
src/fuga/: mod.rs
src/grave/: bdf.rs  dual.rs  gauss_legendre.rs  hyper_dual.rs  jacobian.rs  lda_ls.rs  lm.rs  lm2.rs  lm_test.rs  mlp.rs  ode_old.rs  redoxable.rs  root.rs
src/macros/: julia_macro.rs  matlab_macro.rs  mod.rs  r_macro.rs
src/ml/: mod.rs  reg.rs
src/numerical/: bdf.rs  eigen.rs  fft.rs  gauss_legendre.rs  integral.rs  interp.rs  lagrange.rs  mod.rs  new_ode.rs  newton.rs  ode.rs  ops.rs  optimize.rs  rok4a.rs  root.rs  runge_kutta.rs  spline.rs  utils.rs
src/operation/: extra_ops.rs  mod.rs  mut_ops.rs  number.rs  raw_ops.rs  union.rs
src/ozone/: matrix.rs  mod.rs
src/prelude/: mod.rs  simpler.rs
src/redox/: mod.rs  redoxable.rs
src/special/: function.rs  lanczos.rs  legendre.rs  mod.rs
src/statistics/: dist.rs  mod.rs  ops.rs  rand.rs  stat.rs
src/structure/: ad.rs  complex.rs  dataframe.rs  dual.rs  generic_df.rs  hyper_dual.rs  matrix.rs  mod.rs  multinomial.rs  polynomial.rs  sparse.rs  vector.rs
src/traits/: float.rs  fp.rs  general.rs  math.rs  matrix.rs  mod.rs  mutable.rs  num.rs  pointer.rs  raw.rs  stable.rs  sugar.rs
src/util/: api.rs  low_level.rs  mod.rs  non_macro.rs  pickle.rs  plot.rs  print.rs  useful.rs  wrapper.rs  writer.rs
test_data/inv/: inverse_10.nc  inverse_11.nc  inverse_12.nc  inverse_13.nc  inverse_14.nc  inverse_15.nc  inverse_6.nc  inverse_7.nc  inverse_8.nc  inverse_9.nc
test_data/rand_mat/: randmat_10.nc  randmat_11.nc  randmat_12.nc  randmat_13.nc  randmat_14.nc  randmat_15.nc  randmat_16.nc  randmat_17.nc  randmat_18.nc  randmat_19.nc  randmat_20.nc  randmat_4.nc  randmat_5.nc  randmat_6.nc  randmat_7.nc  randmat_8.nc  randmat_9.nc
tests/: ad.rs  ad_lift.rs  atm.rs  blas_test.rs  change_shape_test.rs  complex_matrix.rs  data_frame.rs  det.rs  dist.rs  dual.rs  integral.rs  integrated.rs  inv.rs  jacobian.rs  jet_tests.rs  linalg.rs  matrix.rs  number.rs  numerical.rs  ops.rs  optimize.rs  ordered_stat_test.rs  polynomial.rs  root.rs  series.rs  special.rs  stat.rs  union.rs  weighted_uniform.rs
tests/dataframe/: dataframe.rs  mod.rs  print.rs  series.rs
tests/o3/: lapack.rs  level2.rs  mod.rs
