[package]
name = "peroxide-ad"
version = "0.2.1"
authors = ["Axect <axect@outlook.kr>"]
edition = "2018"
description = "Proc macro for automatic differenitation of Peroxide"
repository = "https://github.com/Axect/Peroxide"
license = "MIT OR Apache-2.0"
categories = ["science"]
readme = "README.md"
keywords = ["automatic-derivative", "numerical"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro=true

[dependencies]
watt = "0.4"
