[package]
name = "peroxide-ad"
version = "0.3.0"
authors = ["Axect <axect@outlook.kr>"]
edition = "2018"
description = "Proc macro for automatic differenitation of Peroxide"
repository = "https://github.com/Axect/Peroxide"
license = "MIT OR Apache-2.0"
categories = ["science"]
readme = "README.md"
keywords = ["automatic-derivative", "numerical"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro=true

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
