[package]
name = "peroxide-ad"
version = "0.1.4"
authors = ["Axect <axect@outlook.kr>"]
edition = "2018"
description = "Proc macro for automatic differenitation of Peroxide"
repository = "https://github.com/Axect/Peroxide"
license = "BSD-3-Clause"
categories = ["science"]
readme = "README.md"
keywords = ["automatic-derivative", "numerical"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
proc-macro2 = { git = "https://github.com/dtolnay/watt" }
